     in request URI in tika-server (TIKA-3714).

   * Add basic parsers for WARC and WACZ in tika-parsers-standard (TIKA-3697).

   * Add detection for Frictionless Data packages and WACZ (TIKA-3696).

   * Add a fetcher and emitter for Azure blob storage (TIKA-3707).

   * Allow configurability of the EmbeddedDocumentExtractor used
     by the AutoDetectParser (TIKA-3711).

   * Fixed regression in 2.3.0 that led to more embedded filenames
     than appropriate being written to the content (TIKA-3711).

   * tika-server now clones forking process' environment variables
     into forked process (TIKA-3715).

   * Add an optional /eval endpoint for tika-eval profile or compare
     capabilities in tika-server (TIKA-3689).

   * Add a Parsed-By-Full-Set metadata item to record all parsers that processed
     a file (TIKA-3716).

   * Add metadata filters for Optimaize and OpenNLP language detectors (TIKA-3717).

   * Upgrade deeplearning4j to 1.0.0-M2 (TIKA-3458 and PR#527).

   * Various dependency upgrades, including POI, dl4j, gson, jackson,
     twelvemonkeys, log4j2 and others (TIKA-3675 and many PRs from dependabot).

Release 2.3.0 - 02/02/2022

   * Upgrade to Apache POI 5.2.0. This is the first upgrade to POI
     5.x and represents a major refactoring. Users may experience
     significantly more logging (TIKA-3164).

   * Upgrade to log4j2 2.17.1 (TIKA-3638).

   * Improve consistency in reporting package-entry divs across
     all parsers for embedded files (TIKA-3644). This leads
     to some more text (embedded file names) in files with
     many embedded attachments.

   * Improve configuration of maps as params for parsers in
     TikaConfig (TIKA-3645).

   * Improve identification of iWorks 13 files and add parsing
     for thumbnails, some metadata and attachments (TIKA-3634).
     Skip handling of .iwa files, which are not yet supported.

   * Limit the default in-memory processing (maxMainMemoryBytes) in